<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pet_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/pen_detail_margin"
            android:layout_marginStart="@dimen/pen_detail_margin"
            android:layout_marginTop="@dimen/pen_detail_margin_title_top"
            android:textAllCaps="true"
            android:textColor="@color/pet_detail_primary_text"
            android:textSize="@dimen/pen_detail_title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pet_detail_breed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/pen_detail_margin"
            android:layout_marginStart="@dimen/pen_detail_margin"
            android:textColor="@color/pet_detail_secondary_text"
            android:textSize="@dimen/pen_detail_subtitle_text_size" />

        <ImageView
            android:id="@+id/pet_detail_photo"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="@dimen/pen_detail_margin_image_top" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/pen_detail_margin"
            android:layout_marginStart="@dimen/pen_detail_margin"
            android:layout_marginTop="@dimen/pen_detail_margin_top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/pet_detail_color_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/pet_detail_color"
                    android:textColor="@color/pet_detail_primary_text"
                    android:textSize="@dimen/pet_detail_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pet_detail_color_text_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textColor="@color/pet_detail_tertiary_text"
                    android:textSize="@dimen/pet_detail_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/pet_detail_age_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/pet_detail_age"
                    android:textColor="@color/pet_detail_primary_text"
                    android:textSize="@dimen/pet_detail_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pet_detail_age_text_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textColor="@color/pet_detail_tertiary_text"
                    android:textSize="@dimen/pet_detail_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/pet_detail_size_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/pet_detail_size"
                    android:textColor="@color/pet_detail_primary_text"
                    android:textSize="@dimen/pet_detail_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pet_detail_size_text_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textColor="@color/pet_detail_tertiary_text"
                    android:textSize="@dimen/pet_detail_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/pet_detail_sex_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/pet_detail_sex"
                    android:textColor="@color/pet_detail_primary_text"
                    android:textSize="@dimen/pet_detail_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pet_detail_sex_text_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:textColor="@color/pet_detail_tertiary_text"
                    android:textSize="@dimen/pet_detail_text_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/pen_detail_margin"
                android:background="@color/pet_detail_divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pen_detail_tag_container_margin"
                android:layout_marginBottom="@dimen/pen_detail_tag_container_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pet_detail_friendly_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/pet_detail_friendly"
                    android:textColor="@color/pet_detail_primary_text"
                    android:textSize="@dimen/pet_detail_text_size"
                    android:textStyle="bold"
                    android:gravity="center_vertical"/>

                <me.gujun.android.taggroup.TagGroup
                    android:id="@+id/friendly_tag_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:layout_gravity="center_vertical|start"
                    app:atg_backgroundColor="@color/colorPrimary"
                    app:atg_textColor="@android:color/white"
                    app:atg_borderColor="@android:color/white"
                    app:atg_textSize="@dimen/pet_detail_text_size"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/pet_detail_divider"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/pet_detail_adopt_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/pet_detail_adopt"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="@dimen/pen_detail_adopt_text_size"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/pen_detail_margin"
        android:layout_marginStart="@dimen/pen_detail_margin"
        android:layout_marginBottom="@dimen/pen_detail_margin_bottom"/>

</RelativeLayout>